feat: add profile image to user request and response
