# internal/views/user.go
@@ -6,6 +6,7 @@ type RegisterUserRequest struct {
 	Email                string                      `json:"email" validate:"required,email"`
 	Nickname             string                      `json:"nickname" validate:"required"`
 	Fullname             string                      `json:"fullname" validate:"required"`
+	ProfileImageID       int                         `json:"profileImageId" validate:"required"`
 	FirebaseProviderType models.FirebaseProviderType `json:"fbProviderType" validate:"required"`
 	FirebaseUID          string                      `json:"fbUid" validate:"required"`
 }
@@ -15,6 +16,7 @@ type RegisterUserResponse struct {
 	Email                string                      `json:"email"`
 	Nickname             string                      `json:"nickname"`
 	Fullname             string                      `json:"fullname"`
+	ProfileImageURL      string                      `json:"profileImageUrl"`
 	FirebaseProviderType models.FirebaseProviderType `json:"fbProviderType"`
 	FirebaseUID          string                      `json:"fbUid"`
 }
@@ -24,6 +26,7 @@ type FindUserResponse struct {
 	Email                string                      `json:"email"`
 	Nickname             string                      `json:"nickname"`
 	Fullname             string                      `json:"fullname"`
+	ProfileImageURL      string                      `json:"profileImageUrl"`
 	FirebaseProviderType models.FirebaseProviderType `json:"fbProviderType"`
 	FirebaseUID          string                      `json:"fbUid"`
 }
@@ -45,7 +48,8 @@ type UserStatusView struct {
 }
 
 type UpdateUserRequest struct {
-	Nickname string `json:"nickname"`
+	Nickname       string `json:"nickname"`
+	ProfileImageID int    `json:"profileImageId"`
 }
 
 type UpdateUserResponse struct {
@@ -53,6 +57,7 @@ type UpdateUserResponse struct {
 	Email                string                      `json:"email"`
 	Nickname             string                      `json:"nickname"`
 	Fullname             string                      `json:"fullname"`
+	ProfileImageURL      string                      `json:"profileImageUrl"`
 	FirebaseProviderType models.FirebaseProviderType `json:"fbProviderType"`
 	FirebaseUID          string                      `json:"fbUid"`
 }
